basic auth payment and image

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
+
 # Database
 MONGO_URI="mongodb://localhost:27017/vision-app"
-JWT_SECRET="super-secret-key-change-this"
+JWT_SECRET="your_super_secret_jwt_key"
+JWT_EXPIRES_IN="7d"
 
-# PayPal (Get these from developer.paypal.com)
+# PayPal (Sandbox Credentials)
 PAYPAL_CLIENT_ID="your_sandbox_client_id"
 PAYPAL_CLIENT_SECRET="your_sandbox_secret"
-PAYPAL_API_URL="https://api-m.sandbox.paypal.com" # Use live URL for production
+PAYPAL_API_URL="https://api-m.sandbox.paypal.com" # Use 'https://api-m.paypal.com' for live
