--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ JWT_EXPIRES_IN="7d"
 PAYPAL_CLIENT_ID="your_sandbox_client_id"
 PAYPAL_CLIENT_SECRET="your_sandbox_secret"
 PAYPAL_API_URL="https://api-m.sandbox.paypal.com" # Use 'https://api-m.paypal.com' for live
+
+GOOGLE_APPLICATION_CREDENTIALS="x"
