waiting for key .json

--- a/.env
+++ b/.env
@@ -1,12 +1,13 @@
 
 # Database
-MONGO_URI="mongodb://localhost:27017/vision-app"
+MONGO_URI="mongodb://mm:mm@ac-snjib7c-shard-00-01.g0pc57r.mongodb.net:27017,ac-snjib7c-shard-00-02.g0pc57r.mongodb.net:27017,ac-snjib7c-shard-00-00.g0pc57r.mongodb.net:27017/imageSearchDB?ssl=true&authSource=admin&retryWrites=true&w=majority
+"
 JWT_SECRET="your_super_secret_jwt_key"
-JWT_EXPIRES_IN="7d"
+JWT_EXPIRES_IN="30d"
 
 # PayPal (Sandbox Credentials)
 PAYPAL_CLIENT_ID="your_sandbox_client_id"
 PAYPAL_CLIENT_SECRET="your_sandbox_secret"
 PAYPAL_API_URL="https://api-m.sandbox.paypal.com" # Use 'https://api-m.paypal.com' for live
 
-GOOGLE_APPLICATION_CREDENTIALS="x"
+GOOGLE_APPLICATION_CREDENTIALS="./key.json"
